--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
+    "lucide-react": "^0.294.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-data-table-component": "^7.5.4",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
+    "@types/hast": "^3.0.3",
+    "@types/mdx": "^2.0.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -22,6 +34,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
